# center_finder

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: HoughBasedCenterFinder.h  ICenterFinder.h
src/: HoughBasedCenterFinder.cpp  ICenterFinder.cpp
